hphp/hack/test/typecheck/construct/missing_init_static.php.exp
ERROR: File "missing_init_static.php", line 14, characters 24-26:
Please assign a value (Typing[4055])
